--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Reset e estilos globais */
 * {
     margin: 0;
     padding: 0;
@@ -23,7 +24,6 @@ header {
 header h1 {
     font-size: 40px;
     font-weight: bold;
-    margin-bottom: 20px;
 }
 
 .logo {
@@ -31,18 +31,6 @@ header h1 {
     font-weight: bold;
     color: black;
 }
-
-.options {
-    text-align: left;
-    margin-top: 10px;
-}
-
-.forgot-password {
-    text-decoration: none;
-    color: #007BFF;
-    font-size: 14px;
-}
-
 
 .container {
     background: white;
@@ -53,13 +41,6 @@ header h1 {
     text-align: center;
     margin-top: 70px;
 }
-
-.logo {
-    font-size: 32px;
-    font-weight: bold;
-    color: black;
-}
-
 
 h2 {
     font-size: 18px;
@@ -116,10 +97,14 @@ button:hover {
     height: 40px;
 }
 
+.error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
 footer {
     margin-top: 20px;
     font-size: 12px;
-    color: #666;
+    color: gray;
 }
-
- 
